Use precomputed Multinames in JIT code (bug 514331 r=rreitmai+)

When a name has no runtime component, we don't need to copy it in JIT code.
(and most name references don't have a runtime component).

This patch also consolidates the code for copying the const parts of
Multinames which do have a runtime component.